fixtures/valid/task-basic.crumb
BEGIN CRUMB
v=1.1
kind=task
title=Fix auth redirect
source=cursor.agent
---
[goal]
Fix the auth redirect loop after refresh.

[context]
- JWT cookie auth
- Happens on full page refresh

[constraints]
- Keep cookie names stable
- Add a regression check
END CRUMB
